0.9.1
   - bug [9453] "Documentation of parameters in config.txt"
   - bug [9449] "Timing on each plugin call and logging of the result"
